# Voronoi-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw-3.3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
src/: apptime.cpp  apptime.h  debug.cpp  debug.h  inputmanager.cpp  inputmanager.h  main.cpp  mathutility.cpp  mathutility.h  renderer.cpp  renderer.h  voronoiseed.cpp  voronoiseed.h  window.cpp  window.h
src/input/: inputmanager.cpp  inputmanager.h
src/shaders/: a.cpp  defaultfragmentshader.glsl  defaultvertexshader.glsl
src/utility/: apptime.cpp  debug.cpp  mathutility.cpp
src/window/: window.cpp  window.h
